--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -7,12 +7,16 @@
   }
 }
 
-.container {
+.book-container {
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 100%;
   width: 100%;
+
+  header {
+    position: relative;
+  }
 
   .calendar {
     padding: 15rem 10rem 0;
