--- a/src/Components/ReusableComponents/Gallery.scss
+++ b/src/Components/ReusableComponents/Gallery.scss
@@ -13,32 +13,24 @@
     border-width: 2px;
     border-style: solid;
   }
-}
 
-.third-img {
-  grid-area: 1 / 3 / 3 / 4;
-}
+  :nth-child(3) {
+    grid-area: 1 / 3 / 3 / 4;
+    height: 52.5rem !important;
+  }
 
-.fifth-img {
-  grid-area: 2 / 1 / 3 / 3;
-}
+  :nth-child(5) {
+    grid-area: 2 / 1 / 3 / 3;
+    width: 58.5rem !important;
+  }
 
-.eleventh-img {
-  grid-area: 4 / 1 / 6 / 2;
-}
+  :nth-child(11) {
+    grid-area: 4 / 1 / 6 / 2;
+    height: 52.5rem !important;
+  }
 
-.top-img {
-  object-position: center top;
-}
-
-.sixteenth-img {
-  grid-area: 5 / 3 / 6 / 5;
-}
-
-.long-img {
-  height: 52.5rem !important;
-}
-
-.wide-img {
-  width: 58.5rem !important;
+  :nth-child(16) {
+    grid-area: 5 / 3 / 6 / 5;
+    width: 58.5rem !important;
+  }
 }
