--- a/src/Components/CustomRequestForm/CustomRequestForm.scss
+++ b/src/Components/CustomRequestForm/CustomRequestForm.scss
@@ -30,24 +30,32 @@
 
   form {
     height: 480px;
-    display: flex;
-    flex-direction: column;
-    max-width: 90%;
-    flex-wrap: wrap;
+    max-height: fit-content;
 
+    .form-inputs {
+      display: flex;
+      flex-direction: column;
+      max-width: 90%;
+      flex-wrap: wrap;
+      // justify-content: space-evenly;
+      height: 420px;
+    }
     label {
       font-size: 19px;
-      // padding-bottom: 10px;
-      height: 10px;
+      height: fit-content;
+      padding-bottom: 10px;
     }
 
     input {
-      // height: 56px;
+      height: 56px;
       width: 469px;
-      // margin-top: 20px;
       margin-bottom: 45px;
-      // margin-right: 100px;
+      margin-right: 100px;
       background-color: #2e3038;
+    }
+
+    br {
+      height: 100px;
     }
 
     #message {
