--- a/src/App.scss
+++ b/src/App.scss
@@ -109,3 +109,51 @@ body {
     font-size: 60%;
   }
 }
+
+@media only screen and (min-width: 2000px) and (max-width: 2999px) {
+  html:not(.homePage) {
+    font-size: 85%;
+  }
+}
+
+@media only screen and (min-width: 3000px) and (max-width: 3999px) {
+  html:not(.homePage) {
+    font-size: 120%;
+  }
+}
+
+@media only screen and (min-width: 4000px) and (max-width: 4999px) {
+  html:not(.homePage) {
+    font-size: 170%;
+  }
+}
+
+@media only screen and (min-width: 5000px) and (max-width: 5999px) {
+  html:not(.homePage) {
+    font-size: 180%;
+  }
+}
+
+@media only screen and (min-width: 6000px) and (max-width: 6999px) {
+  html:not(.homePage) {
+    font-size: 190%;
+  }
+}
+
+@media only screen and (min-width: 7000px) and (max-width: 7999px) {
+  html:not(.homePage) {
+    font-size: 200%;
+  }
+}
+
+@media only screen and (min-width: 8000px) and (max-width: 8999px) {
+  html:not(.homePage) {
+    font-size: 210%;
+  }
+}
+
+@media only screen and (min-width: 9000px) and (max-width: 9999px) {
+  html:not(.homePage) {
+    font-size: 220%;
+  }
+}
